[package]
name = "solana-handle-instruction-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.18.1"

[lib]
name = "solanahandleinstructiondata"
crate-type = ["cdylib", "lib"]

